# rmdb

./: .env.example  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: rust.yml
migrations/: 20250212171402_create_movies.down.sql  20250212171402_create_movies.up.sql  20250216023156_create_users.up.sql  20250218062728_create_scores.down.sql  20250218062728_create_scores.up.sql  20250218224427_create_reviews.down.sql  20250218224427_create_reviews.up.sql
src/: auth.rs  main.rs  middleware.rs  movies.rs  users.rs
src/auth/: jwt.rs
src/controllers/: mod.rs  movies.rs  reviews.rs  users.rs
src/middleware/: auth_check.rs  log_check.rs  mod.rs
static/: home.html.tera
static/css/: skeleton.css  style.css
static/js/: script.js
templates/: header.html.tera  home.html.tera
templates/layouts/: base.html.tera
templates/movies/: edit.html.tera  form.html.tera  index.html.tera  new.html.tera  show.html.tera
templates/reviews/: form.html.tera  new.html.tera
templates/users/: form.html.tera  sign_in.html.tera  sign_up.html.tera
