[package]
name = "rmdb"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "json"] }
serde = "1.0.217"
tokio = {version = "1.43.0", features=["full"]}
dotenv= "0.15.0"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
